<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/mapTypeNone"
        android:title="@string/map_type_none"/>
    <item
        android:id="@+id/mapTypeNormal"
        android:title="@string/map_type_normal"/>
    <item
        android:id="@+id/mapTypeTerrain"
        android:title="@string/map_type_terrain"/>
    <item
        android:id="@+id/mapTypeSatellite"
        android:title="@string/map_type_satellite"/>
    <item
        android:id="@+id/mapTypeHybrid"
        android:title="@string/map_type_hybrid"/>
</menu>